# mscorlib-safe

./: .gitignore  Cargo.toml  README.md
examples/: integration.rs
mscorlib_safe_derive/: Cargo.toml
mscorlib_safe_derive/src/: lib.rs
src/: bstring.rs  collections.rs  lib.rs  macros.rs  new_safearray.rs  new_variant.rs  params.rs  primitives.rs  result.rs  safearray.rs  struct_wrappers.rs  variant.rs  wrappers.rs
tests/: safearray.rs
