[package]
name = "mscorlib-safe"
version = "0.1.0"
authors = ["Tyler Laing <trinioler@gmail.com>"]

[dependencies]
mscorlib-sys = {version = "^0.1.8"}
widestring = "*"
winapi = {version = "0.3.5", features=["winerror", "oaidl", "oleauto"]}
mscorlib_safe_derive = {version = "0.1.0", path = ".\\mscorlib_safe_derive"}
failure = "*"
