[package]
name = "mscorlib_safe_derive"
version = "0.1.0"
authors = ["Tyler Laing <trinioler@gmail.com>"]
description = "Safe wrappers around FFI bindings to mscorlib"
repository = "https://github.com/ZerothLaw/mscorlib-safe"
keywords = ["windows", "com", "mscorlib"]
categories = ["os::windows-apis", "safe-ffi-bindings", "proc-macro"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "0.14.5"
quote = "0.6.4"
proc-macro2 = "0.4.9"
